# SO-2020

./: GestorMissatge.h
trinity/: Audios.c  Audios.h  CMakeLists.txt  Connecta.c  Connecta.h  GestorMissatge.c  GestorMissatge.h  Options.c  Options.h  StringProcess.c  StringProcess.h  Trinity  clientService.c  clientService.h  includes.h  main.c  main.h  makefile  prints.h  serverService.c  serverService.h  showConnections.c  showConnections.h
trinity/Audios1/: alibaba  uni
trinity/Audios3/: audio2.mpeg  audio3.mpeg
